update card no41 everthing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="participant" id="participant-${i}">
             <div class="profile-photo"></div>
             <div class="participant-name" data-name="Participant ${i}"></div>
-           g <div class="participant-quote" data-quote="Your inspirational quote here."></div>
+            <div class="participant-quote" data-quote="Your inspirational quote here."></div>
             </div>
         `);
         }
